исправлены пути в css файлах

--- a/css/_home.css
+++ b/css/_home.css
@@ -6,7 +6,7 @@
 }
 
 .home__container{
-    background-image: url(/images/fon/fon__home.png);
+    background-image: url(images/fon/fon__home.png);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
