--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,10 @@
-@import '../css/_reset.css';
+@import '_reset.css';
 
-@import '../css/_header.css';
-@import '../css/_home.css';
-@import '../css/_about.css';
-@import '../css/_services.css';
-@import '../css/_potfolio.css';
+@import '_header.css';
+@import '_home.css';
+@import '_about.css';
+@import '_services.css';
+@import '_potfolio.css';
+@import '_appointment.css';
 
-@import '../css/_footer.css';
+@import '_footer.css';
