--- a/css/_appointment.css
+++ b/css/_appointment.css
@@ -20,10 +20,15 @@
   padding: 20px 25px;
   margin-bottom: 35px;
   background: #d9d9d9;
+  border: none;
 }
 
-.appointment__input::placeholder {
-  color: #555;
+.appointment__input:-webkit-autofill,
+.appointment__input:-webkit-autofill:hover,
+.appointment__input:-webkit-autofill:focus {
+  -webkit-text-fill-color: #000 !important;
+  -webkit-box-shadow: 0 0 0px 1000px #d9d9d9 inset !important;
+  font-size: 25px !important;
 }
 
 .appointment__button {
