--- a/css/_header.css
+++ b/css/_header.css
@@ -47,96 +47,106 @@
 
 
 @media (max-width: 1200px) {
-    .header__inner {
-        padding-left: 25px;
-    }
-    
-    .header__list {
-        gap: 60px;
-        font-size: 30px;
-    }
-    
-    .site__logo {
-        margin: 25px 60px;
-    }
+  .header__inner {
+    padding-left: 25px;
+  }
+  
+  .header__list {
+    gap: 60px;
+    font-size: 30px;
+  }
+  
+  .site__logo {
+    margin: 25px 60px;
+  }
 }
 
 @media (max-width: 960px) {
-    .header__inner {
-        padding-left: 40px;
-    }
-    
-    .header__list {
-        gap: 40px;
-        font-size: 24px;
-    }
-    
-    .site__logo {
-        width: 100px;
-        margin: 20px 40px;
-    }
+  .header__inner {
+    padding-left: 40px;
+  }
+  
+  .header__list {
+    gap: 40px;
+    font-size: 24px;
+  }
+  
+  .site__logo {
+    width: 100px;
+    margin: 20px 40px;
+  }
 }
 
 @media (max-width: 760px){
-    .header__nav{
-        display:flex;
-        flex-direction:column;
-        position:fixed;
-        top:0;
-        right:-100%;
-        width:80%;
-        height:100%;
-        background-color:rgba(4,124,255,.95);
-        transition:.3s ease;
-        z-index:1001;
-    }
-    .header__nav.active{right:0}
-    .burger{
-        margin-right:20px;
-        flex-direction:column;
-        cursor:pointer;
-        display:flex;
-        border:none;
-        background:0 0
-    }
-    .header__inner{
-        gap:0;
-        justify-content:space-between
-    }
-    .header__list{
-        color:#ffffff;
-        margin:80px auto;
-        align-items:center;
-        flex-direction:column;
-        gap:20px;
-        display:flex;
-        padding:0
-    }
-    .header__link{
-        color:#ffffff;
-        font-size:22px;
-        display:block;
-        padding:10px
-    }
-    .close-menu{
-        display:flex;
-        position:absolute;
-        top:20px;
-        right:20px;
-        background:0 0;
-        border:none;
-        color:#ffffff;
-        font-size:32px;
-        cursor:pointer;
-        z-index:1002
-    }
-    .overlay.active{
-        opacity:1;
-        visibility:visible
-    }
-    .site__logo{
-        margin-left:20px
-    }
+  .header__nav{
+    display:flex;
+    flex-direction:column;
+    position:fixed;
+    top:0;
+    right:-100%;
+    width:80%;
+    height:100%;
+    background-color:rgba(4,124,255,.95);
+    transition:.3s ease;
+    z-index:1001;
+  }
+  
+  .header__nav.active{
+    right:0
+  }
+  
+  .burger{
+    margin-right:20px;
+    flex-direction:column;
+    cursor:pointer;
+    display:flex;
+    border:none;
+    background:0 0
+  }
+  
+  .header__inner{
+    gap:0;
+    justify-content:space-between
+  }
+  
+  .header__list{
+    color:#ffffff;
+    margin:80px auto;
+    align-items:center;
+    flex-direction:column;
+    gap:20px;
+    display:flex;
+    padding:0
+  }
+  
+  .header__link{
+    color:#ffffff;
+    font-size:22px;
+    display:block;
+    padding:10px
+  }
+  
+  .close-menu{
+    display:flex;
+    position:absolute;
+    top:20px;
+    right:20px;
+    background:0 0;
+    border:none;
+    color:#ffffff;
+    font-size:32px;
+    cursor:pointer;
+    z-index:1002
+  }
+  
+  .overlay.active{
+    opacity:1;
+    visibility:visible
+  }
+  
+  .site__logo{
+    margin-left:20px
+  }
 }
 
 @media (max-width:610px){
