--- a/css/_home.css
+++ b/css/_home.css
@@ -52,3 +52,249 @@ html {
     margin-right: 90px;
     margin-top: 125px;
 }
+
+.icons__foto{
+    width: 60px;
+}
+
+
+
+@media (max-width: 1200px) {
+    .home__title {
+        margin-top: 90px;
+        margin-left: 0;
+        padding: 40px;
+        font-size: 45px;
+        border-left: 4px solid #047CFF;
+        border-bottom: 4px solid #047CFF;
+        width: 350px;
+        font-weight: 600;
+    }
+    
+    .home__container{
+        padding: 60px;
+    }
+
+    .name{
+        padding: 15px 30px;
+        font-size: 28px;
+        border: 2px solid #047CFF;
+        font-weight: 500;
+    }
+
+    .home__name{
+        margin-left: 325px;
+        margin-top: 100px;
+        width: 300px;
+    }
+
+    .icons{
+        gap: 18px;
+        margin-right: 70px;
+        margin-top: 100px;
+    }
+
+    .icons__foto{
+        width: 50px;
+    }
+}
+
+@media (max-width: 960px) {
+    .home__container {
+        padding: 40px; 
+        background-position: 60% center; 
+    }
+
+    .home__title {
+        margin-top: 70px;
+        padding: 30px;
+        font-size: 38px;
+        width: 300px;
+        border-width: 3px;
+    }
+
+    .name {
+        padding: 12px 25px;
+        font-size: 24px;
+        border-width: 1.5px;
+    }
+
+    .home__name {
+        margin-left: 250px;
+        margin-top: 80px;
+        width: 260px;
+    }
+
+    .icons {
+        gap: 15px;
+        margin-right: 50px;
+        margin-top: 80px;
+    }
+
+    .icons__foto {
+        width: 45px;
+    }
+}
+
+@media (max-width: 760px) {
+    .home__container {
+        padding: 30px 20px;
+        background-position: 70% center;
+    }
+
+    .home__title {
+        margin: 50px auto 0; 
+        padding: 20px;
+        font-size: 32px;
+        width: 80%;
+        max-width: 280px;
+        border-width: 2px;
+        text-align: center;
+        border-left: 0px;
+        border-bottom: 0px;
+    }
+
+    .name {
+        padding: 10px 20px;
+        font-size: 20px;
+        border-width: 1px;
+        text-align: center;
+    }
+
+    .home__name {
+        margin: 60px auto 0;
+        width: 80%;
+        max-width: 240px;
+    }
+
+    .icons {
+        justify-content: center;
+        gap: 12px;
+        margin: 60px auto 0;
+        padding-right: 0;
+    }
+
+    .icons__foto {
+        width: 40px;
+    }
+}
+
+@media (max-width: 610px) {
+    .home__container {
+        padding: 25px 15px;
+        background-position: 75% center;
+    }
+
+    .home__title {
+        margin-top: 40px;
+        padding: 15px;
+        font-size: 28px;
+        width: 85%;
+        max-width: 250px;
+        border-width: 2px;
+        border-left: 0px;
+        border-bottom: 0px;
+    }
+
+    .name {
+        padding: 8px 16px;
+        font-size: 18px;
+    }
+
+    .home__name {
+        margin-top: 50px;
+        max-width: 220px;
+    }
+
+    .icons {
+        gap: 10px;
+        margin-top: 50px;
+    }
+
+    .icons__foto {
+        width: 36px;
+    }
+}
+
+@media (max-width: 468px) {
+    .home__container {
+        padding: 20px 10px;
+        background-position: 80% center;
+        background-size: cover;
+    }
+
+    .home__title {
+        margin-top: 30px;
+        padding: 12px;
+        font-size: 24px;
+        width: 90%;
+        max-width: none;
+        border: none;
+        text-align: center;
+    }
+
+    .name {
+        padding: 6px 12px;
+        font-size: 16px;
+        border-width: 1px;
+    }
+
+    .home__name {
+        margin-top: 40px;
+        width: 90%;
+        max-width: 200px;
+    }
+
+    .icons {
+        gap: 8px;
+        margin-top: 40px;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .icons__foto {
+        width: 32px;
+        height: 32px;
+    }
+}
+
+@media (max-width: 375px) {
+  .home__container {
+    padding: 15px 8px;
+    background-position: 70% center; /* чуть сместил фон для мобильных */
+    background-size: cover;
+  }
+
+  .home__title {
+    margin-top: 20px;
+    padding: 10px;
+    font-size: 20px; /* уменьшил размер шрифта */
+    width: 95%;
+    max-width: none;
+    text-align: center;
+  }
+
+  .name {
+    padding: 5px 10px;
+    font-size: 14px; /* уменьшил размер шрифта */
+    border-width: 1px;
+  }
+
+  .home__name {
+    margin-top: 30px;
+    width: 95%;
+    max-width: 180px; /* чуть меньше максимальной ширины */
+  }
+
+  .icons {
+    gap: 6px;
+    margin-top: 30px;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .icons__foto {
+    width: 28px;
+    height: 28px;
+  }
+}
