--- a/css/_home.css
+++ b/css/_home.css
@@ -261,14 +261,14 @@ html {
 @media (max-width: 375px) {
   .home__container {
     padding: 15px 8px;
-    background-position: 70% center; /* чуть сместил фон для мобильных */
+    background-position: 70% center;
     background-size: cover;
   }
 
   .home__title {
     margin-top: 20px;
     padding: 10px;
-    font-size: 20px; /* уменьшил размер шрифта */
+    font-size: 20px;
     width: 95%;
     max-width: none;
     text-align: center;
@@ -276,14 +276,14 @@ html {
 
   .name {
     padding: 5px 10px;
-    font-size: 14px; /* уменьшил размер шрифта */
+    font-size: 14px;
     border-width: 1px;
   }
 
   .home__name {
     margin-top: 30px;
     width: 95%;
-    max-width: 180px; /* чуть меньше максимальной ширины */
+    max-width: 180px;
   }
 
   .icons {
