--- a/css/_services.css
+++ b/css/_services.css
@@ -84,3 +84,271 @@
     width: 750px;
     margin-left: 200px;
 }
+
+
+@media (max-width: 1200px){
+    .services__container {
+        padding: 30px;
+    }
+    
+    .services__title {
+        font-size: 55px;
+        margin: 80px 0;
+    }
+    
+    .services__swiper {
+        gap: 12px;
+    }
+    
+    .swiper__foto {
+        width: 350px;
+    }
+    
+    .swiper__text {
+        font-size: 22px;
+        padding: 6px;
+        bottom: 50px;
+        width: 270px;
+    }
+    
+    .services__subtitle {
+        margin-top: 80px;
+        font-size: 30px;
+    }
+    
+    .services__foto {
+        width: 400px;
+    }
+
+    .services__info {
+        margin-top: 60px;
+    }
+    
+    .services__num {
+        margin-top: 25px;
+        font-size: 50px;
+    }
+    
+    .services__text {
+        margin-top: 20px;
+        font-size: 22px;
+    }
+    
+    .services__content {
+        width: 650px;
+        margin-left: 150px;
+    }
+}
+
+@media (max-width: 960px) {
+    .services__container {
+        padding: 25px;
+    }
+    
+    .services__title {
+        font-size: 48px;
+        margin: 60px 0;
+        text-align: center;
+    }
+    
+    .services__swiper {
+        gap: 10px;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    
+    .swiper__foto {
+        width: 270px;
+        height: auto;
+    }
+    
+    .swiper__text {
+        font-size: 18px;
+        padding: 5px;
+        bottom: 40px;
+        width: 240px;
+    }
+    
+    .services__subtitle {
+        margin-top: 60px;
+        font-size: 26px;
+    }
+    
+    .services__foto {
+        width: 350px;
+    }
+
+    .services__info {
+        margin-top: 50px;
+        flex-direction: column;
+    }
+    
+    .services__num {
+        margin-top: 20px;
+        font-size: 42px;
+        display: flex;
+        justify-content: center;
+    }
+    
+    .services__text {
+        margin-top: 15px;
+        font-size: 18px;
+        text-align: center;
+    }
+    
+    .services__content {
+        width: 90%;
+        max-width: 550px;
+        margin: 0 auto;
+    }
+}
+
+@media (max-width: 760px){
+    .services__container {
+        padding: 20px 15px;
+    }
+    
+    .services__title {
+        font-size: 36px;
+        margin: 40px 0;
+        line-height: 1.2;
+    }
+    
+    .services__swiper {
+        gap: 8px;
+    }
+    
+    .swiper__foto {
+        width: 220px;
+    }
+    
+    .swiper__text {
+        font-size: 12px;
+        width: 150px;
+        bottom: 30px;
+        padding: 4px 8px;
+    }
+    
+    .services__subtitle {
+        margin-top: 40px;
+        font-size: 22px;
+    }
+    
+    .services__foto {
+        width: 300px;
+    }
+
+    .services__info {
+        margin-top: 40px;
+    }
+    
+    .services__num {
+        font-size: 36px;
+        margin-top: 15px;
+        display: flex;
+        justify-content: center;
+    }
+    
+    .services__text {
+        font-size: 16px;
+        margin-top: 12px;
+    }
+    
+    .services__content {
+        max-width: 450px;
+        padding: 0 10px;
+    }
+}
+
+@media (max-width: 610px) {
+    .services__container {
+        padding: 15px 10px;
+    }
+    
+    .services__title {
+        font-size: 28px;
+        margin: 30px 0;
+    }
+    
+    .services__swiper {
+        gap: 6px; 
+        padding: 0 5px;
+    }
+    
+    .swiper__foto {
+        width: 250px;
+    }
+    
+    .swiper__text {
+        font-size: 14px;
+        width: 160px;
+        bottom: 20px;
+        padding: 3px 6px;
+    }
+    
+    .services__subtitle {
+        margin-top: 30px;
+    }
+    
+    .services__foto {
+        width: 250px;
+        margin-bottom: 15px;
+    }
+
+    .services__info {
+        margin-top: 30px;
+    }
+    
+    .services__num {
+        margin-top: 10px;
+    }
+    
+    .services__text {
+        font-size: 14px;
+        margin-top: 8px;
+    }
+    
+    .services__content {
+        max-width: 350px;
+    }
+}
+
+@media (max-width: 468px) {
+        .services__title {
+        font-size: 24px;
+        margin: 25px 0;
+    }
+    .swiper__foto{
+        width: 400px;
+        margin-left: 10px;
+    }
+    .swiper__text{
+        font-size: 16px;
+        width: 280px;
+        bottom: 20px;
+        padding: 3px 6px;
+        margin-left: 10px;
+    }
+}
+
+@media (max-width: 375px){
+    .services__subtitle{
+        font-size: 16px;
+    }
+
+    .services__num{
+        font-size: 30px;
+    }
+
+    .services__text{
+        font-size: 12px;
+    }
+
+    .services__foto{
+        width: 200px;
+    }
+
+    .swiper__foto{
+        width: 300px;
+    }
+}
