--- a/css/_services.css
+++ b/css/_services.css
@@ -319,15 +319,15 @@
         margin: 25px 0;
     }
     .swiper__foto{
-        width: 400px;
-        margin-left: 10px;
+        width: 350px;
+        margin-left: 35px;
     }
     .swiper__text{
         font-size: 16px;
         width: 280px;
         bottom: 20px;
         padding: 3px 6px;
-        margin-left: 10px;
+        margin-left: 35px;
     }
 }
 
@@ -350,5 +350,12 @@
 
     .swiper__foto{
         width: 300px;
+        margin-left: 15px;
+    }
+
+    .swiper__text{
+        font-size: 13px;
+        width: 230px;
+        margin-left: 15px;
     }
 }
