сделана кнопка возвращения на верх

--- a/css/style.css
+++ b/css/style.css
@@ -6,5 +6,6 @@
 @import '_services.css';
 @import '_potfolio.css';
 @import '_appointment.css';
+@import '_backToTop.css';
 
 @import '_footer.css';
